--- a/css/style.css
+++ b/css/style.css
@@ -206,12 +206,13 @@
         border-radius: 50%;
         background: #323237;
         position: relative;
+        display: block;
         right: 10vw;
         top: 10vh;
         float: right;
+        overflow: auto;
     }
 
-    .about span {}
     /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
 
     @media screen and (max-width:600px) {
@@ -220,10 +221,16 @@
         }
         .about {
             width: 100%;
+            padding:40px;
             border-radius:0;
+            right: 0;
+            top:0;
+            background: rgba(50,50,55,0.5);
+            display: inline-block;
+            overflow: auto;
         }
         #about {
-            height:150%;
+            height:150vh;
         }
         #logo {
             position: relative;
