--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,11 @@
     div.gallery:hover {
         border: 1px solid #777;
     }
-
+    .mask {
+        width: 100%;
+        max-height: 250px;
+        overflow: hidden;
+    }
     div.gallery img {
         width: 100%;
         height: auto;
@@ -241,12 +245,14 @@
             margin: 15px 0px;
             cursor:pointer;
         }
-        #menu-link {
+        .menu-link a {display: none;}
+        .menu-link.responsive {
             display: none;
             margin-top: 60px;
         }
-        #menu-link a {
+        .menu-link.responsive a {
             float: none;
+            display: block;
             width: 100%;
         }
         .menu {
