--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,7 @@
             top:0;
             background: rgba(50,50,55,0.5);
             display: inline-block;
-            overflow: auto;
+            overflow: hidden;
         }
         #about {
             height:150vh;
