新增海報作品

--- a/css/style.css
+++ b/css/style.css
@@ -254,6 +254,7 @@
             float: none;
             display: block;
             width: 100%;
+            height: auto;
         }
         .menu {
             display: inline-block;
